# voice-assistant

./: .gitmodules  CMakeLists.txt  README.md  config.json  readme.txt
src/: CMakeLists.txt  build.bat  readme.txt  test-llama-api.ps1  tts-test.cc  voice_assistant.cc
src/asr/: asr-module.cc  asr-module.h
src/audio/: audio-play-win.cc  audio-play.h  mic-capture-win.cc  mic-capture.h
src/common/: json-config.cc  json-config.h  thread-safe-queue.h
src/kws/: kws-module.cc  kws-module.h
src/nlu/: nlu-module.cc  nlu-module.h  ws-client-win.cc  ws-client.h
src/tts/: tts-module.cc  tts-module.h
src/vad/: vad-module.cc  vad-module.h
